deploy/rke2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docukube-rke2-http
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/instance: docukube-rke2
  type: ClusterIP
